@@ -1,5 +1,5 @@
 <Type Name="Range" FullName="Gtk.Range">
-  <TypeSignature Language="C#" Value="public class Range : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class Range : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Lee Mallabone" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Base class for widgets that visualize an <see cref="T:Gtk.Adjustment"/>.</summary>
+    <remarks><para>This class provides helper methods and properties for manipulating concrete widgets like <see cref="T:Gtk.HScale"/> and <see cref="T:Gtk.VScale"/>.</para></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Widget</BaseTypeName>
@@ -40,10 +40,10 @@
         <Parameter Name="page" Type="System.Double" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="step">To be added: an object of type 'double'</param>
-        <param name="page">To be added: an object of type 'double'</param>
-        <remarks>To be added</remarks>
+        <summary>Sets the step and page sizes for this range.</summary>
+        <param name="step">Value difference for step movements, (see below).</param>
+        <param name="page">Value difference for page movements, (see below).</param>
+        <remarks><para>The <paramref name="step"/> size is used when the user clicks the <see cref="T:Gtk.Scrollbar"/> arrows or moves <see cref="T:Gtk.Scale"/> with arrow keys. The <paramref name="page"/> size is used for example when moving via Page Up or Page Down keys.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="SetRange">
@@ -57,10 +57,10 @@
         <Parameter Name="max" Type="System.Double" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="min">To be added: an object of type 'double'</param>
-        <param name="max">To be added: an object of type 'double'</param>
-        <remarks>To be added</remarks>
+        <summary>Sets the limits of this range.</summary>
+        <param name="min">The minimum acceptable value for this range.</param>
+        <param name="max">The maximum acceptable value for this range.</param>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Finalize">
@@ -97,9 +97,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.Range'</returns>
-        <remarks>To be added</remarks>
+        <summary>Internal constructor</summary>
+        <returns></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -124,10 +124,10 @@
         <Parameter Name="value" Type="System.Double" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'double'</param>
-        <returns>To be added: an object of type 'double'</returns>
-        <remarks>To be added</remarks>
+        <summary>Manage the value of this range.</summary>
+        <param name="value">The new value for this range.</param>
+        <returns>The current value of this range.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Inverted">
@@ -140,10 +140,10 @@
         <Parameter Name="value" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'bool'</param>
-        <returns>To be added: an object of type 'bool'</returns>
-        <remarks>To be added</remarks>
+        <summary>Manage whether the control of this range is manipulated in the opposite direction.</summary>
+        <param name="value">Set to <see langword="true"/> to invert the controls.</param>
+        <returns>Whether visual control of the range is currently inverted.</returns>
+        <remarks><para>Setting this to <see langword="true"/> causes a <see cref="T:Gtk.VScale"/> widget to move from right to left, instead of left to right.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="UpdatePolicy">
@@ -156,10 +156,10 @@
         <Parameter Name="value" Type="Gtk.UpdateType" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gtk.UpdateType'</param>
-        <returns>To be added: an object of type 'Gtk.UpdateType'</returns>
-        <remarks>To be added</remarks>
+        <summary>Manage how often the value label is updated.</summary>
+        <param name="value">A new update policy.</param>
+        <returns>The current update policy.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Adjustment">
@@ -172,10 +172,10 @@
         <Parameter Name="value" Type="Gtk.Adjustment" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gtk.Adjustment'</param>
-        <returns>To be added: an object of type 'Gtk.Adjustment'</returns>
-        <remarks>To be added</remarks>
+        <summary>Manipulate the underlying model of this range.</summary>
+        <param name="value">Sets a new <see cref="T:Gtk.Adjustment"/> object to model this range.</param>
+        <returns>The current <see cref="T:Gtk.Adjustment"/> underlying this range.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="MoveSlider">
@@ -194,8 +194,8 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fired when the value in this range changes.</summary>
+        <remarks><para>Connect to this event with a standard <see cref="T:System.EventHandler"/> to find out when the value changes.</para></remarks>
       </Docs>
     </Member>
     <Member MemberName="AdjustBounds">
