@@ -1,3 +1,7 @@
+2003-03-11  Lee Mallabone <mono-docs@fonicmonkey.net>
+
+	* en/Gtk/Range.xml: First draft.
+	
 2003-03-09  Hector E. Gomez Morales  <hgomez_36@flashmail.com>
 
 	* en/Gtk/Widget.xml:First draft: all methods documented.
